istio-ambient/observability/kiali/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiali-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: kiali.cnoe.localtest.me
      http:
        paths:
          - backend:
              service:
                name: kiali
                port:
                  number: 20001
            path: /
            pathType: Prefix
